<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_page"
        android:enabled="true"
        android:title="@string/home_page"
        android:icon="@drawable/bottom_nav_icon_home"/>
    <item
        android:id="@+id/profile_page"
        android:enabled="true"
        android:title="@string/profile_page"
        android:icon="@drawable/bottom_nav_icon_profile"/>
    <item
        android:id="@+id/roadmap_page"
        android:enabled="true"
        android:title="@string/roadmap_page"
        android:icon="@drawable/bottom_nav_icon_roadmap"/>
    <item
        android:id="@+id/vacancies_page"
        android:enabled="true"
        android:title="@string/vacancies_page"
        android:icon="@drawable/bottom_nav_icon_vacancies"/>
</menu>