<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:gravity="center_horizontal">

    <include
        android:id="@+id/topBar"
        layout="@layout/diploma_top_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_main_white"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_login"
            />

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="15dp"
            android:background="@drawable/bg_error"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@drawable/ic_error"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invalid_e_mail_or_password"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="12dp"
            android:background="@drawable/bg_sign_page_edittext"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:id="@+id/emailErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_gravity="start"
            android:text="@string/enter_email"
            android:textSize="10sp"
            android:textColor="@color/red_error"
            tools:visibility="visible"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/password"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="12dp"
                android:background="@drawable/bg_sign_page_edittext"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                />

            <View
                android:id="@+id/see_password_button"
                android:layout_width="18dp"
                android:layout_height="14dp"
                android:layout_gravity="right|center"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_see_password" />

        </FrameLayout>

        <TextView
            android:id="@+id/passwordErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="6dp"
            android:text="@string/enter_password"
            android:textSize="10sp"
            android:textColor="@color/red_error"
            tools:visibility="visible"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColor="@color/blue"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            />

        <LinearLayout
            android:id="@+id/bottom_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/login_action_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/login"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_button_sign"
                    />

                <ProgressBar
                    android:id="@+id/loginProgressBar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    tools:visibility="visible"
                    android:visibility="gone"
                    />

            </FrameLayout>

            <LinearLayout
                android:layout_marginTop="26dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/dont_have"/>

                <TextView
                    android:id="@+id/sign_action_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_horizontal"
                    android:textColor="@color/blue"
                    android:text="@string/sign_up"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>