<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:gravity="center_horizontal">

    <include
        android:id="@+id/topBar"
        layout="@layout/diploma_top_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_main_white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:padding="20dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_login"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:layout_marginEnd="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:text="@string/name"
                            />

                        <EditText
                            android:id="@+id/nameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:padding="12dp"
                            android:background="@drawable/bg_sign_page_edittext"
                            android:inputType="text"
                            />

                        <TextView
                            android:id="@+id/nameErrorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/enter_name"
                            android:textSize="10sp"
                            android:textColor="@color/red_error"
                            tools:visibility="visible"
                            android:visibility="gone"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:layout_marginStart="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:fontFamily="@font/roboto_medium"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:text="@string/surname"
                            />

                        <EditText
                            android:id="@+id/surnameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:padding="12dp"
                            android:background="@drawable/bg_sign_page_edittext"
                            android:inputType="text"
                            />

                        <TextView
                            android:id="@+id/surnameErrorText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:text="@string/enter_surname"
                            android:textSize="10sp"
                            android:textColor="@color/red_error"
                            tools:visibility="visible"
                            android:visibility="gone"
                            />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/email"
                    />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="12dp"
                    android:background="@drawable/bg_sign_page_edittext"
                    android:inputType="textEmailAddress"
                    />

                <TextView
                    android:id="@+id/emailErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/enter_email"
                    android:textSize="10sp"
                    android:textColor="@color/red_error"
                    tools:visibility="visible"
                    android:visibility="gone"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/phone_number"
                    />

                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="12dp"
                    android:background="@drawable/bg_sign_page_edittext"
                    android:inputType="phone"
                    />

                <TextView
                    android:id="@+id/phoneNumberErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/enter_phone"
                    android:textSize="10sp"
                    android:textColor="@color/red_error"
                    tools:visibility="visible"
                    android:visibility="gone"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/password"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:padding="12dp"
                        android:background="@drawable/bg_sign_page_edittext"
                        android:inputType="textPassword"
                        android:importantForAutofill="no"
                        />

                    <View
                        android:id="@+id/see_password_button"
                        android:layout_width="18dp"
                        android:layout_height="14dp"
                        android:layout_gravity="right|center"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/ic_see_password" />

                </FrameLayout>

                <TextView
                    android:id="@+id/passwordErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/enter_password"
                    android:textSize="10sp"
                    android:textColor="@color/red_error"
                    tools:visibility="visible"
                    android:visibility="gone"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/confirm"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/confirmPasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:padding="12dp"
                        android:background="@drawable/bg_sign_page_edittext"
                        android:inputType="textPassword"
                        android:importantForAutofill="no"
                        />

                    <View
                        android:id="@+id/see_password_confirm"
                        android:layout_width="18dp"
                        android:layout_height="14dp"
                        android:layout_gravity="right|center"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/ic_see_password" />

                </FrameLayout>

                <TextView
                    android:id="@+id/confirmErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/wrong_password"
                    android:textSize="10sp"
                    android:textColor="@color/red_error"
                    tools:visibility="visible"
                    android:visibility="gone"
                    />

                <LinearLayout
                    android:id="@+id/terms_of_agree_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/agreement_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:id="@+id/termsOfPrivacyText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/agreement"
                        android:textSize="12dp"
                        android:textColor="@color/black"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/bottom_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/signUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/sign_up"
                    android:gravity="center_horizontal"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_button_sign"
                    />

                <ProgressBar
                    android:id="@+id/signProgressBar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    tools:visibility="visible"
                    android:visibility="gone"
                    />

            </FrameLayout>

            <LinearLayout
                android:layout_marginTop="26dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/already_have"/>

                <TextView
                    android:id="@+id/sign_action_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_horizontal"
                    android:textColor="@color/blue"
                    android:text="@string/login"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>