<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="22dp">

    <include
        android:id="@+id/title"
        layout="@layout/layout_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/forgot_password_subtitle"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/smsContactDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/bg_forgot_password_contact"
            android:paddingLeft="24dp"
            android:paddingTop="20dp"
            android:paddingRight="24dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/smsIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@color/light_purple"
                android:src="@drawable/ic_sms"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/smsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/source_sans_pro_regular"
                android:text="@string/smsText"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/phoneNumber"
                app:layout_constraintStart_toEndOf="@id/smsIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/white"
                android:fontFamily="@font/source_sans_pro_bold"
                android:hint="@string/_7777777777"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/smsIcon"
                app:layout_constraintTop_toBottomOf="@id/smsText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailContactDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/bg_forgot_password_contact"
            android:paddingLeft="24dp"
            android:paddingTop="20dp"
            android:paddingRight="24dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@color/light_purple"
                android:src="@drawable/ic_mail"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/source_sans_pro_regular"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/email"
                app:layout_constraintStart_toEndOf="@id/emailIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:hint="@string/example_gmail_com"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/emailIcon"
                app:layout_constraintTop_toBottomOf="@id/emailText"
                tools:ignore="TextViewEdits" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_sign"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/continue_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>